Disable the tap highlight color on iOS ready #473

--- a/source/frontend/src/component/ScrollBar/ScrollBar.scss
+++ b/source/frontend/src/component/ScrollBar/ScrollBar.scss
@@ -13,6 +13,7 @@
 		text-align: center;
 		background: $colorSecondary;
 		border-radius: 40px;
+		-webkit-tap-highlight-color: transparent;
 
 		.icon {
 			width: 15px;
