Fixed min height for the market map
ready #469

--- a/source/frontend/src/block/MarketMap/MarketMap.scss
+++ b/source/frontend/src/block/MarketMap/MarketMap.scss
@@ -28,7 +28,8 @@
 
 	@include respond-to(SMALL) {
 		.market-map {
-			height: calc(100vh - #{$sizeHeaderMobile});
+			height: calc(100vh - #{$sizeHeaderMobile * 2});
+			min-height: 480px;
 		}
 
 		.side-panel {
