Update the market map to use fly to instead of move/pan Fix interruption of the market map
ready #468

--- a/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
+++ b/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
@@ -64,7 +64,7 @@
 
 	@include respond-to(SMALL) {
 		.wave-form-wrapper {
-			width: calc(100% - #{mobile-size($sizeGrid * 3)})
+			width: calc(100% - #{mobile-size($sizeGrid * 3)});
 		}
 	}
 }
