--- a/source/frontend/src/block/FindYourAudience/FindYourAudienceCategory/FindYourAudienceCategory.scss
+++ b/source/frontend/src/block/FindYourAudience/FindYourAudienceCategory/FindYourAudienceCategory.scss
@@ -17,8 +17,8 @@
 		margin-left: $sizeGrid;
 	}
 
-	.heading {
-		margin-bottom: $sizeGrid / 2;
+	.copy {
+		margin-top: $sizeGrid / 2
 	}
 
 	.items {
