Change the hover to the hover button class instead of the action button class

--- a/source/frontend/src/component/layout/SiteMenu/SiteMenuPage/SiteMenuPage.scss
+++ b/source/frontend/src/component/layout/SiteMenu/SiteMenuPage/SiteMenuPage.scss
@@ -111,7 +111,7 @@
 	}
 }
 
-@include hover('.action-button') {
+@include hover('.hover-button') {
 	.label {
 		transform: translateX($sizeGridSecondary * 1.5);
 	}
