Add padding to the blogPost to avoid ugly non-spacing Make sure the spacing doesnt look ugly when not providing a percentage on the program teaser

--- a/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
+++ b/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
@@ -50,6 +50,7 @@
 			display: inline-block;
 			vertical-align: middle;
 			color: $colorPrimary;
+			margin-right: $sizeGrid / 4;
 		}
 
 		.label {
@@ -58,7 +59,6 @@
 			vertical-align: middle;
 			text-transform: uppercase;
 			color: $colorQuaternary;
-			margin-left: $sizeGrid / 4;
 		}
 	}
 
