Strip out empty filter content categories Run prettify

--- a/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
+++ b/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
@@ -47,7 +47,7 @@
 	}
 
 	.gradient-overlay {
-		transition: opacity .2s $easeLinear;
+		transition: opacity 0.2s $easeLinear;
 	}
 
 	.reach-heading {
