--- a/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
+++ b/source/frontend/src/component/button/ButtonQuaternary/ButtonQuaternary.scss
@@ -29,18 +29,13 @@
 	.stripe {
 		@include size($sizeGrid / 2, 0.4rem);
 		@include position(calc(50% - 0.2rem), auto, auto, 0);
-		transform: scaleX(0);
 		position: absolute;
-		transform-origin: left center;
-		transition: transform 0.2s $easeInOutCubic;
-		transition-delay: 0s;
 	}
 
 	.label {
 		display: inline-block;
 		vertical-align: middle;
-		transform: translateX(-$sizeGridSecondary);
-		transition: transform 0.2s $easeInOutCubic;
+		transition: color .2s $easeInOutCubic;
 	}
 
 	@include respond-to(SMALL) {
@@ -51,12 +46,8 @@
 }
 
 @include hover('.button-quaternary', '.is-hover') {
-	.stripe {
-		transform: scaleX(1);
-		transition-delay: 0.1s;
-	}
-
 	.label {
-		transform: translateX(0);
+		color: $colorSecondary;
+		font-weight: 800;
 	}
 }
