--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no">
     <head-placeholder token="{{ placeholder_token|raw }}">
-    <title>Vue Skeleton</title>
+    <title>{{ head_title|safe_join(' | ') }}</title>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#fff">
     <meta name="application-name" content="Spectrum Reach">
