targets are no longer required on audience teaser blocks

--- a/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
+++ b/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
@@ -91,7 +91,7 @@
 	}
 }
 
-@include hover('.audience-teaser') {
+@include hover('.audience-teaser.has-link') {
 	.gradient-overlay {
 		opacity: 0;
 	}
