Anchors in the free text block have the same font size.
ready #573

--- a/source/frontend/src/block/FreeText/FreeText.scss
+++ b/source/frontend/src/block/FreeText/FreeText.scss
@@ -7,6 +7,10 @@
 			@extend %reset-bmp;
 			padding-bottom: $sizeGrid/2;
 			//font: 600 1.8rem / 1.16 $fontOpenSans;
+
+			a {
+				font-size: inherit;
+			}
 		}
 
 		h1 {
