Overwrite margin on the first blocks on mobile!
re #564

--- a/source/frontend/src/page/ContentPage/ContentPage.scss
+++ b/source/frontend/src/page/ContentPage/ContentPage.scss
@@ -16,6 +16,13 @@
 	@include respond-to(SMALL) {
 		.blockWrapper {
 			padding-top: $sizeHeaderMobile;
+
+			:global {
+				// Overrule backend styling because on mobile we never want margin on the first element
+				.block-component:first-child {
+					margin-top: 0!important;
+				}
+			}
 		}
 	}
 }
