--- a/source/frontend/src/block/FreeText/FreeText.scss
+++ b/source/frontend/src/block/FreeText/FreeText.scss
@@ -40,6 +40,15 @@
 	  @extend %heading-07;
 	}
 
+	ol,
+	ul {
+	  margin-bottom: $sizeGrid;
+
+	  li {
+		font: 400 1.6rem / 1.625 $fontOpenSans;
+	  }
+	}
+
 	p {
 	  display: block;
 	  font: 400 1.6rem / 1.625 $fontOpenSans;
@@ -84,7 +93,7 @@
 	  }
 
 	  .alignment-center,
-	  .text-align-center  {
+	  .text-align-center {
 		text-align: center;
 	  }
 	}
