--- a/source/frontend/src/asset/style/type/copy.scss
+++ b/source/frontend/src/asset/style/type/copy.scss
@@ -2,9 +2,8 @@ p {
 	@extend %reset-bmp;
 }
 
-%copy-01,
 .copy-01 {
-	font: 400 1.8rem / 1.625 $fontOpenSans;
+  @extend %copy-01;
 }
 
 %copy-02,
@@ -29,23 +28,7 @@ p {
 	font: 400 1.4rem / 1.5 $fontOpenSans;
 }
 
-// Breakpoints
-@include respond-to(XX_LARGE) {
-	.copy-01 {
-		font-size: 1.6rem;
-	}
-}
-
-@include respond-to(X_LARGE) {
-	.copy-01 {
-		font-size: 1.5rem;
-	}
-}
-
 @include respond-to(SMALL) {
-	.copy-01 {
-		font-size: mobile-size(2.8rem);
-	}
 	.copy-02 {
 		font-size: mobile-size(2.2rem);
 	}
