--- a/source/frontend/src/block/FreeText/FreeText.scss
+++ b/source/frontend/src/block/FreeText/FreeText.scss
@@ -58,6 +58,11 @@
 		display: inline-block;
 		vertical-align: middle;
 	  }
+
+	  a {
+		font-size: inherit;
+		font-weight: inherit;
+	  }
 	}
 
 	a {
