Added spacing to the logos to avoid tight copy

--- a/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
+++ b/source/frontend/src/block/AudienceTeaser/AudienceTeaser.scss
@@ -48,6 +48,7 @@
 	  @include size(20%, auto);
 	  @include aspect-ratio(100px, 80px);
 	  flex-shrink: 0;
+	  margin-left: $sizeGrid;
 	}
 
 	.sub-heading {
