--- a/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
+++ b/source/frontend/src/block/ProgramModule/ProgramTeaser/ProgramTeaser.scss
@@ -48,8 +48,8 @@
 	  @include size(20%, auto);
 	  @include aspect-ratio(100px, 80px);
 	  flex-shrink: 0;
+	  margin-left: $sizeGrid;
 	}
-
 
 	.percentage {
 		display: block;
