Change the width of the AudienceStatisticsB block Removed all extra margins on elements inside of the heading
re #647

--- a/source/frontend/src/block/AudienceStatisticsB/AudienceStatisticsB.scss
+++ b/source/frontend/src/block/AudienceStatisticsB/AudienceStatisticsB.scss
@@ -11,13 +11,17 @@
 	}
 
 	.content {
-		@include size(30%, auto);
+		@include size(50%, auto);
 		color: $colorWhite;
 		text-align: center;
 	}
 
 	.heading {
 		margin-bottom: $sizeGrid;
+
+		* {
+		  margin: 0;
+		}
 	}
 
 	.copy {
