--- a/source/frontend/src/block/MarketMap/ZoomActions/ZoomActions.scss
+++ b/source/frontend/src/block/MarketMap/ZoomActions/ZoomActions.scss
@@ -1,30 +1,36 @@
 :local {
+	$buttonSize: 5rem;
+
 	.zoom-actions {
-		@include offset($sizeGrid, 50%);
-		transform: translateY(-50%);
-		position: absolute;
 		flex-direction: column;
 		display: flex;
 	}
 
 	.zoom-button {
-		@include size($sizeGrid * 1.5);
+		@include size($buttonSize);
 		border-radius: 100%;
-		border: 1px solid rgba($colorPrimary, 0.3);
+		background: $colorPrimary;
 		transition: background-color 250ms $easeLinear;
 
 		&:not(:first-child) {
 			margin-top: $sizeGrid / 2;
 		}
 
-		.icon {
-			@include size(12px, auto);
+		svg {
 			@include offset(50%, 50%);
+			transform: translate(-50%, -50%);
+			position: absolute;
+		}
+
+		.icon {
+			@include size(13px, auto);
+			@include offset(50%, 50%);
+			min-height: 1px;
 			transform: translate(-50%, -50%);
 			position: absolute;
 
 			path {
-				fill: $colorPrimary;
+				fill: $colorWhite;
 				transition: path 250ms $easeLinear;
 			}
 		}
@@ -35,4 +41,8 @@
 			@include size($sizeGrid * 2);
 		}
 	}
+}
+
+@include hover('.zoom-button') {
+  background: lighten($colorPrimary, 5%);
 }
