--- a/source/frontend/src/block/MarketMap/MarketMap.scss
+++ b/source/frontend/src/block/MarketMap/MarketMap.scss
@@ -8,4 +8,9 @@
 		position: absolute;
 		@include position(auto, auto, $sizeGrid, $sizeGrid);
 	}
+
+  	.contact-button {
+	  @include position(auto, 0, 0, auto);
+	  position: absolute;
+	}
 }
