--- a/source/frontend/src/block/MarketMap/MarketMap.scss
+++ b/source/frontend/src/block/MarketMap/MarketMap.scss
@@ -1,4 +1,8 @@
 :local {
+	.wrapper {
+		position: relative;
+	}
+
 	.market-map {
 		@include size(100%, calc(100vh - #{$sizeHeader}));
 		min-height: 768px;
@@ -9,8 +13,18 @@
 		@include position(auto, auto, $sizeGrid, $sizeGrid);
 	}
 
-  	.contact-button {
-	  @include position(auto, 0, 0, auto);
-	  position: absolute;
+	.contact-button {
+		@include position(auto, 0, 0, auto);
+		position: absolute;
+	}
+
+	.search {
+		@include position(0, 0, auto, auto);
+		position: absolute;
+	}
+
+	.result-panel {
+		@include position(0, 0, auto, auto);
+		position: absolute;
 	}
 }
