--- a/source/frontend/src/block/MarketMap/MarketPanel/MarketPanel.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/MarketPanel.scss
@@ -71,16 +71,15 @@
 
 	.panel-body {
 		@include size(100%, calc(100% - 8rem));
+
 	}
 
 	.blocks {
-		padding: 8rem;
+		padding: $sizeGrid $sizeGrid * 2;
 	}
 
 	.block {
-		&:not(:last-child) {
-			margin-bottom: $sizeGrid;
-		}
+		margin-bottom: $sizeGrid * 2;
 	}
 }
 
