--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketImages/MarketImages.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketImages/MarketImages.scss
@@ -13,13 +13,15 @@
 		@include size(100%, auto);
 		display: flex;
 		flex-wrap: wrap;
+	  	border-top: 1px solid $colorBorder;
+	  	border-left: 1px solid $colorBorder
 	}
 
 	.image {
 		@include size(100% / 3, auto);
 		@include aspect-ratio(1px, 1px);
 		flex-shrink: 0;
-		border: 1px solid $colorBorder;
-		//border-right: 1px solid $colorBorder;
+		border-right: 1px solid $colorBorder;
+		border-bottom: 1px solid $colorBorder;
 	}
 }
