--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -37,23 +37,59 @@
     <link rel="shortcut icon"
           href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7favicon.ico">
     <link href="/version/{{ frontend_version_int }}/css/app.css" rel="stylesheet">
+
+    <!-- ChatBotCSS -->
+    <link rel="stylesheet" type="text/css" href="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/chatbot-style.css">
+
 </head>
 <body>
 <div id="app"></div>
 {{ page }}
+
+<!-- Flow Container -->
+<div id="manywho">
+    <div id="loader" class="mw-bs">
+        ChatBot Loads Here
+    </div>
+</div>
+
 <script type="text/javascript" src="/version/{{ frontend_version_int }}/js/manifest.js"></script>
 <script type="text/javascript" src="/version/{{ frontend_version_int }}/js/vendor.js"></script>
 <script type="text/javascript" src="/version/{{ frontend_version_int }}/js/app.js"></script>
-<!-- Start of LiveChat (www.livechatinc.com) code -->
-<script type="text/javascript">
-    window.__lc = window.__lc || {};
-    window.__lc.license = 3918441;
-    (function() {
-        var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-        lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-    })();
+
+<!-- Vendor Scripts -->
+<script src="https://assets.manywho.com/js/vendor/jquery-2.1.4.min.js"></script>
+<script src="https://assets.manywho.com/js/vendor/react-0.14.6.min.js"></script>
+<script src="https://assets.manywho.com/js/vendor/react-dom-0.14.6.min.js"></script>
+<script src="https://assets.manywho.com/js/vendor/socket.io-1.4.5.js"></script>
+<script src="https://assets.manywho.com/js/vendor/moment-with-locales-2.10.6.min.js"></script>
+<script src="https://assets.manywho.com/js/vendor/loglevel-1.4.0.min.js"></script>
+
+<!-- Setup Flow Enviorment -->
+<script src="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/flowchat-main.js"></script>
+
+<!-- Load Flow Required -->
+<script src="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/ui-core.min.js"></script>
+<script src="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/ui-bootstrap.min.js"></script>
+
+<!-- Chat Components -->
+<script src="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/chatbot-components.js"></script>
+
+<!-- Start Flow -->
+<script>
+  manywho.initialize();
 </script>
+
+<!-- Start of LiveChat (www.livechatinc.com) code -->
+{#<script type="text/javascript">#}
+    {#window.__lc = window.__lc || {};#}
+    {#window.__lc.license = 3918441;#}
+    {#(function() {#}
+        {#var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;#}
+        {#lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';#}
+        {#var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);#}
+    {#})();#}
+{#</script>#}
 <!-- End of LiveChat code -->
 </body>
 </html>
