Prettify the code Add a class to the body if the page contains the MarketMap block

--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketImages/MarketImages.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketImages/MarketImages.scss
@@ -13,8 +13,8 @@
 		@include size(100%, auto);
 		display: flex;
 		flex-wrap: wrap;
-	  	border-top: 1px solid $colorBorder;
-	  	border-left: 1px solid $colorBorder
+		border-top: 1px solid $colorBorder;
+		border-left: 1px solid $colorBorder;
 	}
 
 	.image {
