Set the progressbar background to transparent to avoid red backgrounds when 100% is not reached

--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketComparePercentages/MarketComparePercentages.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketComparePercentages/MarketComparePercentages.scss
@@ -45,8 +45,9 @@
 	.progress-bar {
 		@include size(100%, 1rem);
 		display: block;
-		background: red;
+		background: transparent;
 		font-size: 0;
+	  	white-space: nowrap;
 	}
 
 	.progress-piece {
