Added variables for chat

--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -77,6 +77,12 @@
 
 <!-- Start Flow -->
 <script>
+  var tid = "e422e20c-aeaa-4c5c-b8a9-cc944d796425";
+
+  var fid = "90a2de64-5b91-4736-b933-ed7b1b20cdfd";
+
+  var vid = null;
+
   manywho.initialize();
 </script>
 
