--- a/source/frontend/src/block/MarketMap/MarketPanel/MarketPanel.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/MarketPanel.scss
@@ -84,26 +84,39 @@
 	}
 
 	@include respond-to(SMALL) {
+		$marketLabelHeight: mobile-size(8rem);
 		.wrapper {
 			padding-bottom: 0;
 		}
 
 		.panel {
-			@include size(100%, 50vh);
+			@include size(100%, calc(100vh - #{$sizeHeaderMobile + mobile-size(20rem)}));
 			@include position(auto, 0, mobile-size(12rem), 0);
 			max-width: 100%;
 		}
 
 		.market-label {
-			$marketLabelHeight: mobile-size(8rem);
 			height: $marketLabelHeight;
 			top: -$marketLabelHeight;
 			line-height: $marketLabelHeight;
 			transform: none;
+			z-index: 1;
 		}
 
 		.panel-header {
 			height: mobile-size(8rem);
+		}
+
+		.panel-content {
+			&:before {
+				@include pseudo;
+				width: 100%;
+				height: mobile-size(20rem);
+				background: white;
+				top: 0;
+				left: 0;
+				transform: translateY(-100%);
+			}
 		}
 
 		.panel-body {
