Modifying the distance from the bottom to allow the 3rd party button to be moved below it Feedbcak #700

--- a/source/frontend/src/block/MarketMap/MarketMap.scss
+++ b/source/frontend/src/block/MarketMap/MarketMap.scss
@@ -10,7 +10,7 @@
 
 	.zoom-actions {
 		position: absolute;
-		@include position(auto, auto, $sizeGrid, $sizeGrid);
+		@include position(auto, auto, $sizeGrid * 3, $sizeGrid);
 	}
 
 	.contact-button {
